# cabal-multi-css-repro

./: .gitignore  README.md  cabal.project
assets/: custom.css
package-a/: package-a.cabal
package-a/src/: MyLib.hs
package-b/: LICENSE  package-b.cabal
package-b/src/: MyLib.hs
